# AutumnLibrary

./: .env  README.md  main.py  manage.py  pyproject.toml
AutumnLibrary/: asgi.py  settings.py  urls.py  wsgi.py
catalog/: admin.py  models.py  serializers.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_initial.py  0003_book_author_alter_language_language.py  0004_author_alter_book_author.py  0005_alter_author_dod.py  0006_bookimage.py
catalog/templates/: index.html
user/: admin.py  models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_delete_author.py
